--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>upvote-frontend-forge</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>UpvoteZone</title>
+    <meta name="description" content="Professional Reddit Upvote Service" />
+    <meta name="author" content="UpvoteZone" />
 
-    <meta property="og:title" content="upvote-frontend-forge" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="UpvoteZone" />
+    <meta property="og:description" content="Professional Reddit Upvote Service" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
